--- a/html_advanced/3-index.html
+++ b/html_advanced/3-index.html
@@ -8,5 +8,15 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
 	<link rel="icon" type="image/x-icon" href="./favicon.ico">
 </head>
-<body></body>
+<body>
+	<header>
+		Header
+	</header>
+	<main>
+		Main content
+	</main>
+	<footer>
+		Footer
+	</footer>
+</body>
 </html>
