--- a/html_advanced/3-index.html
+++ b/html_advanced/3-index.html
@@ -9,14 +9,8 @@
 	<link rel="icon" type="image/x-icon" href="./favicon.ico">
 </head>
 <body>
-	<header>
-		Header
-	</header>
-	<main>
-		Main content
-	</main>
-	<footer>
-		Footer
-	</footer>
+	<header>Header</header>
+	<main>Main content</main>
+	<footer>Footer</footer>
 </body>
 </html>
