--- a/html_advanced/article.html
+++ b/html_advanced/article.html
@@ -3,23 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<title>Homepage - Techium</title>
+	<title>Article - Techium</title>
 	<meta name="description" content="Article - Techium">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
 	<link rel="icon" type="image/x-icon" href="./favicon.ico">
 </head>
 <body>
-	<header>
-		Header
-	</header>
-	<main>
-		Main content
-		<aside>
-			Aside
-		</aside>
-	</main>
-	<footer>
-		Footer
-	</footer>
+	<header>Header</header>
+	<main>Main content<aside>Aside</aside></main>
+	<footer>Footer</footer>
 </body>
 </html>
