--- a/html_advanced/10-index.html
+++ b/html_advanced/10-index.html
@@ -61,7 +61,7 @@
 			<article>Testimonial 2</article>
 			<article>Testimonial 3</article>
 		</section>
-		<section>Contact</section>
+		<section><h2>Contact</h2></section>
 	</main>
 	<footer>
 		Footer
