--- a/html_advanced/12-index.html
+++ b/html_advanced/12-index.html
@@ -26,8 +26,10 @@
 				<h3>Web Development</h3>
 				<h3>Social Media</h3>
 			</h2>
+			<p>We work with you</p>
 		</section>
 		<section><h2>Works</h2>
+			<p>Take a look in our portfolio</p>
 			<article>
 				<h3>Interior Design</h3>
 			</article>
@@ -53,6 +55,7 @@
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!
 				</p>
 			</h2>
+			<p>Everything about us</p>
 		</section>
 		<section><h2>Latest news</h2>
 			<article>
@@ -66,11 +69,15 @@
 			</article>
 		</section>
 		<section><h2>Testimonials</h2>
+			<p>We are more than a digital company</p>
 			<article>Testimonial 1</article>
 			<article>Testimonial 2</article>
 			<article>Testimonial 3</article>
 		</section>
-		<section>Contact</section>
+		<section><h2>Contact</h2>
+			<p>We like to know new people</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+		</section>
 	</main>
 	<footer>
 		Footer
