Some sections got into div

--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -18,10 +18,13 @@
 	<main>
 		<h1>Homepage</h1>
 		<section>
+			<div>
 			<h2>We help you build your brand!</h2>
+			</div>
 		</section>
 		<section>
-			<h2>Services
+			<div>
+			<h2>Services</h2>
 				<h3>Design & Concept</h3>
 				<h3>Digital Strategy</h3>
 				<h3>Content Strategy</h3>
@@ -29,8 +32,11 @@
 				<h3>Web Development</h3>
 				<h3>Social Media</h3>
 			<p>We work with you</p>
+			</div>
 		</section>
-		<section><h2>Works</h2>
+		<section>
+			<div>
+			<h2>Works</h2>
 			<p>Take a look in our portfolio</p>
 			<article>
 				<h3>Interior Design</h3>
@@ -41,6 +47,7 @@
 			<article>
 				<h3>Personal Brand</h3>
 			</article>
+			</div>
 		</section>
 		<section>
 			<h2>About Us</h2>
