--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -50,6 +50,7 @@
 			</div>
 		</section>
 		<section>
+			<div>
 			<h2>About Us</h2>
 				<h3>Who are we</h3>
 				<p>
@@ -65,8 +66,11 @@
 				</p>
 			
 			<p>Everything about us</p>
+			</div>
 		</section>
-		<section><h2>Latest news</h2>
+		<section>
+			<div>
+			<h2>Latest news</h2>
 			<article>
 				<h3>Hoc loco tenere se Triarius non potuit.</h3>
 			</article>
@@ -76,16 +80,23 @@
 			<article>
 				<h3>Bestiarum vero nullum iudicium puto.</h3>
 			</article>
+			</div>
 		</section>
-		<section><h2>Testimonials</h2>
+		<section>
+			<div>
+			<h2>Testimonials</h2>
 			<p>We are more than a digital company</p>
 			<article>Testimonial 1</article>
 			<article>Testimonial 2</article>
 			<article>Testimonial 3</article>
+			</div>
 		</section>
-		<section><h2>Contact</h2>
+		<section>
+			<div>
+			<h2>Contact</h2>
 			<p>We like to know new people</p>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+			</div>
 		</section>
 	</main>
 	<footer>
