--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -40,8 +40,11 @@
 		</section>
 		<section>
 			<div>
+				<header>
 				<h2>Works</h2>
-					<p>Take a look in our portfolio</p>
+				<p>Take a look in our portfolio</p>
+				</header>
+				<div>
 					<article>
 					<h3>Interior Design</h3>
 					</article>
@@ -51,6 +54,7 @@
 					<article>
 					<h3>Personal Brand</h3>
 					</article>
+				</div>
 			</div>
 		</section>
 		<section>
