--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -59,7 +59,11 @@
 		</section>
 		<section>
 			<div>
+				<header>
 				<h2>About Us</h2>
+				<p>Everything about us</p>
+				</header>
+				<div>
 					<h3>Who are we</h3>
 					<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!
@@ -72,12 +76,15 @@
 					<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!
 					</p>
-					<p>Everything about us</p>
+				</div>
 			</div>
 		</section>
 		<section>
 			<div>
+				<header>
 				<h2>Latest news</h2>
+				</header>
+				<div>
 					<article>
 					<h3>Hoc loco tenere se Triarius non potuit.</h3>
 					</article>
@@ -87,22 +94,31 @@
 					<article>
 					<h3>Bestiarum vero nullum iudicium puto.</h3>
 					</article>
+				</div>
 			</div>
 		</section>
 		<section>
 			<div>
+				<header>
 				<h2>Testimonials</h2>
-					<p>We are more than a digital company</p>
+				<p>We are more than a digital company</p>
+				</header>
+				<div>
 					<article>Testimonial 1</article>
 					<article>Testimonial 2</article>
 					<article>Testimonial 3</article>
+				</div>
 			</div>
 		</section>
 		<section>
 			<div>
+				<header>
 				<h2>Contact</h2>
-					<p>We like to know new people</p>
+				<p>We like to know new people</p>
+				</header>
+				<div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+				</div>
 			</div>
 		</section>
 	</main>
