--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -86,12 +86,15 @@
 				</header>
 				<div>
 					<article>
+					<p>Career</p>
 					<h3>Hoc loco tenere se Triarius non potuit.</h3>
 					</article>
 					<article>
+					<p>Digital Life</p>
 					<h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
 					</article>
 					<article>
+					<p>Social</p>
 					<h3>Bestiarum vero nullum iudicium puto.</h3>
 					</article>
 				</div>
