--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -9,8 +9,7 @@
 	<link rel="icon" type="image/x-icon" href="./favicon.ico">
 </head>
 <body>
-	<br>
-	<!--Header-->
+	<br><!--Header-->
 	<header>
 		<div>
 			<span>Techium</span>
