--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -9,8 +9,8 @@
 	<link rel="icon" type="image/x-icon" href="./favicon.ico">
 </head>
 <body>
-	<br><!--Header-->
-	<header>
+	<!--Header-->
+	<br><header>
 		<div>
 			<span>Techium</span>
 			<nav></nav>
