New comments are added

--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -16,7 +16,9 @@
 			<nav></nav>
 		</div>
 	</header>
+	<!-- Main -->
 	<main>
+		<!-- Hero section -->
 		<h1>Homepage</h1>
 		<section>
 			<div>
@@ -129,6 +131,7 @@
 			</div>
 		</section>
 	</main>
+	<!-- Footer -->
 	<footer>
 		<div>Footer</div>
 	</footer>
