--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -25,6 +25,7 @@
 				<h2>We help you build your brand!</h2>
 			</div>
 		</section>
+		<!-- Services section -->
 		<section>
 			<div>
 				<header>
@@ -41,6 +42,7 @@
 				</div>
 			</div>
 		</section>
+		<!-- Works section -->
 		<section>
 			<div>
 				<header>
@@ -60,6 +62,7 @@
 				</div>
 			</div>
 		</section>
+		<!-- About Us section -->
 		<section>
 			<div>
 				<header>
@@ -82,6 +85,7 @@
 				</div>
 			</div>
 		</section>
+		<!-- Latest news section -->
 		<section>
 			<div>
 				<header>
@@ -106,6 +110,7 @@
 				</div>
 			</div>
 		</section>
+		<!-- Testimonials section -->
 		<section>
 			<div>
 				<header>
@@ -119,6 +124,7 @@
 				</div>
 			</div>
 		</section>
+		<!-- Contact section -->
 		<section>
 			<div>
 				<header>
