--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -17,6 +17,7 @@
 			</div>
 			<nav>
 				<a href="/">Home</a>
+				<a href="">Services</a>
 				<a href="">Works</a>
 				<a href="">About</a>
 				<a href="">Latest news</a>
