Anchor link to p

--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -17,12 +17,12 @@
 			</div>
 			<nav>
 				<a href="/">Home</a>
-				<a href="./services">Services</a>
-				<a href="">Works</a>
-				<a href="">About</a>
-				<a href="">Latest news</a>
-				<a href="">Testimonials</a>
-				<a href="">Contact</a>
+				<p id="services">Services</p>
+				<p id="works">Works</p>
+				<p href="">About</p>
+				<p href="">Latest news</p>
+				<p href="">Testimonials</p>
+				<p href="">Contact</p>
 			</nav>
 		</div>
 	</header>
