--- a/html_advanced/26-styleguide.html
+++ b/html_advanced/26-styleguide.html
@@ -39,7 +39,7 @@
 					<li>Sagittis adipiscing lorem eleifend.</li>
 					<li>Felis enim feugiat dolore viverra.</li>
 				</ul>
-				<h3>Definition</h3>
+				<h3>Ordered</h3>
 				<ol>
 					<li>Dolor pulvinar etiam magna etiam.</li>
 					<li>Sagittis adipiscing lorem eleifend.</li>
